<resources>

    // App info
    <string name="app_name">RestaurantApp</string>

    //Shared
    <string name="currency"> Kč</string>

    // Main activity
    <string name="welcome_text">Scan QR Code of your table</string>
    <string name="top_logo">Top screen logo</string>
    <string name="qr_reader">Transparent for qr reader</string>
    <string name="camera_required">Camera permission required</string>
    <string name="internet_googleplay_required">You need to be connected to the internet and sign
        in to the Google play</string>

    // Customer activity
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="table_number">TABLE NUMBER</string>

    // Profile holder
    <string name="profile_welcome_text">Profile</string>

    // Login/Signup fragment
    <string name="login_welcome_text">Log into your account</string>
    <string name="create_acc_welcome_text">Create your account</string>
    <string name="username">Email:</string>
    <string name="username_hint">Email</string>
    <string name="psswd">Password:</string>
    <string name="psswd_hint">Password</string>
    <string name="psswd_confirm">Confirm password:</string>
    <string name="psswd_confirm_hint">Confirm password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_create_acc">Create</string>
    <string name="btn_back_to_login">Back to Log in</string>
    <string name="toast_bad_email">Email is not in valid form</string>
    <string name="toast_bad_passwd">Password has to have at least 8 characters with 1 upper case, 1 lower case, 1 special and 1 digit!</string>
    <string name="toast_bad_passwd_conf">Passwords don\'t match</string>

    // Account fragment
    <string name="account_welcome_text">Your account</string>
    <string name="acc_name">Account name</string>
    <string name="tab_allergens">Allergens</string>
    <string name="tab_history">History</string>

    // FoodMenu fragment
    <string name="item_name">Item Name</string>
    <string name="btn_price">0.0</string>
    <string name="check_all">All</string>
    <string name="string_buy_confirmation_title">Order confirmation</string>
    <string name="string_buy_confirmation_text">Order %1$s Kč?</string>
    <string name="string_order_info_text">Item: %1$s, table: %2$s </string>
    <string name="btn_close">Close</string>
    <string name="btn_Ok">OK</string>


    // Pay fragment
    <string name="btn_pay">Pay</string>
    <string name="pay_welcome_text">Select what to pay</string>
    <string name="pay_wait_for_waiter">Item marked for payment, please wait for waitress</string>
    <string name="pay_nothing_to_pay_for">Select items to pay</string>
    <string name="string_non_pending_exception">You cannot delete other then pending order</string>
    <string name="pay_dialog_delete_title">Delete order</string>
    <string name="pay_dialog_delete_message">Are you sure you want to cancel order %1$s?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    
    //Allergen fragment
    <string name="submitUserAllergens">Submit</string>

    // Bottom menu
    <string name="title_menu">Menu</string>
    <string name="title_pay">Pay</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    // STAFF PART

    // Login
    <string name="display_warning">WARNING: This part was designed for tablets or devices with big screen only. It is not recommended to use it on small screen devices.</string>
    <string name="string_bad_url_format">Url needs to be in following format: #*#https://ulr.com/*#*</string>
    <string name="string_bad_url_timeout">Couldn\'t contact API server. Open settings and check if your URL is correct</string>

    // Order rov
    <string name="table_prefix">Table:</string>
    <string name="pending_order_dbInsert_failed">Order failed to be inserted to database</string>

    // Staff Tables
    <string name="table_prefix_no_colon">Table</string>
    <string name="to_pay">To pay:</string>
    <string name="price_left_suffix"> left</string>
    <string name="string_error_fetching_tables">An error occurred with loading of tables</string>


    // Staff login
    <string name="string_account_not_found">Account either does not exist or the password is not valid</string>

    // Staff Goods
    <string name="txt_products">Menu:</string>
    <string name="txt_tables">Tables:</string>
    <string name="txt_categories">Categories:</string>
    <string name="btn_add">+</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_remove">-</string>

    <string name="hint_table_number">Table Number</string>
    <string name="hint_qr_code">QR Code</string>
    <string name="hint_name">Name</string>
    <string name="hint_desc">Description</string>
    <string name="hint_price">Price</string>
    <string name="hint_category_name">Category Name</string>
    <string name="btn_create">Create</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>

    <string name="category_add_title">Add category</string>
    <string name="table_add_title">Add table</string>
    <string name="product_add_title">Add product</string>

    <string name="category_update_title">Update category</string>
    <string name="table_update_title">Update table</string>
    <string name="product_update_title">Update product</string>

    <string name="category_delete">Are you sure you want to delete category %1$s?</string>
    <string name="table_delete">Are you sure you want to delete table %1d? All orders on this table will be lost!</string>
    <string name="product_delete">Are you sure you want to delete %1$s?</string>

    // Overview
    <string name="all_orders">All orders:</string>
    <string name="paid_orders">Paid orders:</string>
    <string name="overview_dialog_delete_message">Are you sure you want to cancel order %1$s on table %2$d?</string>

    // Api url
    <string name="hint_api_url">url</string>
    <string name="btn_save">Save</string>


</resources>