<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.customerPart.SignupFragment">

    <TextView
        android:id="@+id/textCreateAccount"
        android:text="@string/create_acc_welcome_text"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textUsernameCreate"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/textCreateAccount"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/textPasswordCreate"
        android:text="@string/psswd"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textUsernameCreate"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.3"/>

    <TextView
        android:id="@+id/textPasswordConfirmCreate"
        android:text="@string/psswd_confirm"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textPasswordCreate"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.3"/>

    <EditText
        android:id="@+id/editUsernameCreate"
        android:hint="@string/username_hint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@+id/textUsernameCreate"
        app:layout_constraintTop_toBottomOf="@id/textCreateAccount"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintWidth_percent="0.5"/>

    <EditText
        android:id="@+id/editPasswordCreate"
        android:hint="@string/psswd_hint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@+id/textPasswordCreate"
        app:layout_constraintTop_toBottomOf="@+id/editUsernameCreate"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.5"/>

    <EditText
        android:id="@+id/editPasswordConfirmCreate"
        android:hint="@string/psswd_confirm_hint"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@+id/textPasswordConfirmCreate"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordCreate"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth_percent="0.5"/>

    <Button
        android:id="@+id/btnCreateAcc"
        android:text="@string/btn_create_acc"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordConfirmCreate"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/btnBackToLogin"
        android:text="@string/btn_back_to_login"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateAcc"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>