<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.isp.restaurantapp.viewModels.LoginVM" />

        <!--
        <variable
            name="user"
            type="com.google.firebase.auth.FirebaseUser" />
            -->

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textLogIntoYourAccount"
            android:text="@string/login_welcome_text"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textUsername"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/textLogIntoYourAccount"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/textPassword"
            android:text="@string/psswd"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textUsername"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.3"/>

        <EditText
            android:id="@+id/editUsername"
            android:hint="@string/username_hint"
            android:text="@={viewModel.email}"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toRightOf="@+id/textUsername"
            app:layout_constraintTop_toBottomOf="@id/textLogIntoYourAccount"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintWidth_percent="0.5"/>

        <EditText
            android:id="@+id/editPassword"
            android:hint="@string/psswd_hint"
            android:text="@={viewModel.password}"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toRightOf="@+id/textPassword"
            app:layout_constraintTop_toBottomOf="@+id/editUsername"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.5"/>

        <Button
            android:id="@+id/btnLogIn"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{() -> viewModel.logInAndLoadUsersAllergens()}"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/btn_signup"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

