<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="table"
            type="com.isp.restaurantapp.models.dto.TableDTO" />
        <variable
            name="viewModel"
            type="com.isp.restaurantapp.viewModels.StaffGoodsVM" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:autoSizeMinTextSize="30sp"
            android:text="@string/table_update_title"/>

        <EditText
            android:id="@+id/et_update_table_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_table_number"
            android:text="@={viewModel.updatedTableNumber}"
            />

        <EditText
            android:id="@+id/et_update_table_qrCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_qr_code"
            android:text="@={viewModel.updatedTableQrCode}"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/btn_update_table"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/btn_update"
                android:layout_margin="5dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                app:layout_constraintRight_toLeftOf="@id/guide_update_table"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/btn_cancel_update_table"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/btn_cancel"
                android:layout_margin="5dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                app:layout_constraintLeft_toRightOf="@id/guide_update_table"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_update_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>