<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.isp.restaurantapp.viewModels.StaffLoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textLogIntoStaffAccount"
            android:text="@string/login_welcome_text"
            android:autoSizeTextType="uniform"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.12"/>

        <ImageButton
            android:id="@+id/btn_set_api_url"
            android:layout_width="0dp"
            android:src="@drawable/ic_database"
            android:scaleType="centerCrop"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintDimensionRatio="1:1"
            />

        <TextView
            android:id="@+id/textStaffUsername"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/textLogIntoStaffAccount"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <TextView
            android:id="@+id/textStaffPassword"
            android:text="@string/psswd"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textStaffUsername"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <EditText
            android:id="@+id/editStaffUsername"
            android:hint="@string/username_hint"
            android:text="@={viewModel.emailString}"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@id/textStaffUsername"
            app:layout_constraintTop_toBottomOf="@id/textLogIntoStaffAccount"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"/>

        <EditText
            android:id="@+id/editStaffPassword"
            android:hint="@string/psswd_hint"
            android:text="@={viewModel.passwdString}"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@id/textStaffPassword"
            app:layout_constraintTop_toBottomOf="@id/editStaffUsername"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"/>

        <TextView
            android:id="@+id/txt_display_warning"
            android:text="@string/display_warning"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/editStaffPassword"
            app:layout_constraintHeight_percent="0.08"/>

        <Button
            android:id="@+id/btnStaffLogIn"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_display_warning"
            app:layout_constraintLeft_toRightOf="@id/guide_staff_login"
            app:layout_constraintRight_toLeftOf="@id/guide_staff_login"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintWidth_percent="0.4"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_staff_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>