<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.isp.restaurantapp.viewModels.StaffGoodsVM" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_update_product_name"
            android:text="@={viewModel.updatedProductName}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_name"
            />

        <EditText
            android:id="@+id/et_update_product_desc"
            android:text="@={viewModel.updatedProductDesc}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_desc"
            />

        <Spinner
            android:id="@+id/spinner_category_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_allergens_update"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            />

        <EditText
            android:id="@+id/et_update_product_price"
            android:text="@={viewModel.updatedProductPrice}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_price"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/btn_update_product"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/btn_update"
                android:layout_margin="5dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                app:layout_constraintRight_toLeftOf="@id/guide_update_product"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/btn_cancel_product_update"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/btn_cancel"
                android:layout_margin="5dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                app:layout_constraintLeft_toRightOf="@id/guide_update_product"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_update_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>