<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.isp.restaurantapp.viewModels.PayVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.customerPart.MenuFragment">

        <TextView
            android:id="@+id/payWelcomeText"
            android:text="@string/pay_welcome_text"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="1"/>

        <CheckBox
            android:id="@+id/checkAllItemsToPay"
            android:text="@string/check_all"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/payWelcomeText"
            app:layout_constraintBottom_toBottomOf="@id/payWelcomeText"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/payWelcomeTextLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/payWelcomeText"
            android:background="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemsToPayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnPayAll"
            app:layout_constraintTop_toBottomOf="@id/payWelcomeTextLine"/>

        <Button
            android:id="@+id/btnPayAll"
            android:text="@string/btn_pay"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.08"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>